feat(voucher): implement complete Campaign and Voucher system (Phase 12)
- Add Campaign and Voucher entities, repositories, and services
- Implement Admin APIs for Campaign and Voucher config (with soft delete)
- Implement Public APIs to list active campaigns and available vouchers
- Implement Customer APIs to claim vouchers and view voucher wallet
- Integrate automatic Welcome Voucher distribution upon email verification
- Integrate voucher validation and discount calculation in Checkout & Order flows
- Implement rollback logic to refund vouchers upon order cancellation/failure
- Refactor codebase to optimize imports and remove Fully Qualified Class Names
- Update unit tests, integration points, and database seed scripts